<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="on">On</string>
	<string name="off">Off</string>
    <string name="app_name">D2B-Android</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Convert</string>
    <string name="decimal">Decimal</string>
    <string name="binary">Binary</string>
    <string name="input_message">Enter a number of the selected type&#8230;</string>
    <string name="title_activity_main">D2B-Android</string>
    <string name="edit_text_hint">Results will appear here&#8230;</string>
    <string name="action_about">About</string>
    <string name="input_type_TextView">Input Type:</string>
    <string name="output_type_TextView">Output Type:</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_string1">D2B-Android</string>
    <string name="about_string2">Designed and developed by\nChristopher Sprague and Kamil Bynoe</string>
    <string name="about_string3">Special Thanks to</string>
    <string name="about_string4">Joseph Kozak, for the app\'s artwork</string>
    <string name="about_button_string">View Project on GitHub</string>
    <string name="d2b_version_number">D2B-Android Version 1.2.0</string> <!-- this is arbitrary at the moment -->
	<string name="color_scheme">Color Scheme</string>
    <string name="title_activity_settings">Settings</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="defaults">Defaults</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="preference_file">com.css.d2bAndroid.conf</string>
    <string name="SETTINGS_theme_reference">D2B_THEME_LIGHT</string>
    <string name="AboutActivityTitle">About D2B-Android</string>

</resources>